--- a/Cross.html
+++ b/Cross.html
@@ -178,7 +178,7 @@ body
 	Word = new Array();
 	Clue = new Array("Каон-Ари", 
 "Биом", 
-"Город на воде", 
+"Город на древних", 
 "Предпочтение", 
 "Это получают советники от героев", 
 "Насекомое", 
